chore: update languages in i18n

--- a/app/locales/ar-SA.json
+++ b/app/locales/ar-SA.json
@@ -1,135 +1,136 @@
 {
-    "components": {
-        "chatInterface": {
-            "placeholder": "أدخل رسالتك..."
-        },
-        "clickMenu": {
-            "showForm": "عرض نموذج إدخال البيانات",
-            "showChat": "عرض واجهة المحادثة"
-        },
-        "fileUpload": {
-            "title": "قم بتحميل بياناتك",
-            "upload": "اختر ملفًا أو اسحبه هنا",
-            "lastLoaded": "آخر تحميل"
-        },
-        "header": {
-            "settings": "الإعدادات"
-        },
-        "optionalFields": {
-            "heartRate": "معدل ضربات القلب",
-            "placeholderHeartRate": "أدخل معدل ضربات قلبك",
-            "bloodPressure": "ضغط الدم",
-            "placeholderBloodPressure": "أدخل ضغط دمك مثل 120/80",
-            "sports": "الرياضات",
-            "placeholderSports": "ما هي الرياضات التي تمارسها؟",
-            "medications": "الأدوية",
-            "placeholderMedications": "أدخل الأدوية التي تتناولها",
-            "chronicDiseases": "الأمراض المزمنة",
-            "placeholderChronicDiseases": "أدخل الأمراض المزمنة التي تعاني منها",
-            "allergies": "الحساسيات",
-            "placeholderAllergies": "أدخل الحساسيات لديك",
-            "diet": "النظام الغذائي",
-            "placeholderDiet": "أدخل النظام الغذائي المتبع",
-            "waterIntake": "استهلاك الماء يوميًا (لتر)",
-            "placeholderWaterIntake": "أدخل كمية الماء اليومية",
-            "familyHistory": "التاريخ الطبي العائلي",
-            "placeholderFamilyHistory": "أدخل التاريخ الطبي لعائلتك",
-            "smoking": "التدخين",
-            "smokingOptions": {
-                "never": "أبدًا",
-                "occasionally": "أحيانًا",
-                "regularly": "بشكل منتظم"
-            },
-            "selectPlaceholder": "اختر",
-            "alcohol": "استهلاك الكحول",
-            "alcoholOptions": {
-                "never": "أبدًا",
-                "occasionally": "أحيانًا",
-                "regularly": "بشكل منتظم"
-            },
-            "sleep": "النوم (ساعات/يوم)",
-            "placeholderSleep": "أدخل عدد ساعات نومك اليومية",
-            "physicalActivityLevel": "مستوى النشاط البدني",
-            "placeholderPhysicalActivityLevel": "أدخل مستوى نشاطك البدني",
-            "workType": "نوع العمل",
-            "placeholderWorkType": "أدخل نوع عملك",
-            "stressLevel": "مستوى التوتر",
-            "placeholderStressLevel": "أدخل مستوى التوتر لديك",
-            "mentalHealth": "الصحة النفسية",
-            "placeholderMentalHealth": "أدخل حالتك النفسية",
-            "cholesterolLevel": "مستوى الكوليسترول",
-            "placeholderCholesterolLevel": "أدخل مستوى الكوليسترول لديك",
-            "bloodSugarLevel": "مستوى السكر في الدم",
-            "placeholderBloodSugarLevel": "أدخل مستوى السكر في دمك",
-            "supplements": "المكملات الغذائية",
-            "placeholderSupplements": "أدخل المكملات الغذائية التي تتناولها",
-            "vaccinations": "التطعيمات",
-            "placeholderVaccinations": "أدخل التطعيمات التي حصلت عليها",
-            "reproductiveHealth": "الصحة الإنجابية",
-            "placeholderReproductiveHealth": "أدخل معلومات الصحة الإنجابية الخاصة بك",
-            "visionAndHearing": "البصر والسمع",
-            "placeholderVisionAndHearing": "أدخل مشكلات البصر والسمع لديك",
-            "sleepQuality": "جودة النوم",
-            "placeholderSleepQuality": "أدخل جودة نومك",
-            "medicalRecords": "السجلات الطبية",
-            "placeholderMedicalRecords": "أدخل سجلاتك الطبية",
-            "medicalHistory": "السجل الطبي",
-            "placeholderMedicalHistory": "أدخل الأمراض السابقة التي أصبت بها"
-        },
-        "privacyModal": {
-            "title": "سياسة الخصوصية الخاصة بنا",
-            "text1": "يتم استخدام البيانات التي تقدمها فقط بواسطة نظام الاستشارات الصحية، ولن يتم مشاركتها مع أطراف ثالثة. لا يتم تخزين بياناتك في النظام، ويمكنك التحكم بها وحفظها على جهازك الخاص.",
-            "text2": "بقبول شروط الخصوصية، فإنك توافق على استخدام المعلومات التي تقدمها للحصول على استشارات."
-        },
-        "response": {
-            "title": "رد الدكتور سانوفايز:",
-            "analyzing": "جارٍ تحليل البيانات 📚🧠",
-            "thinking": "أفكر 🤔"
-        },
-        "settingsModal": {
-            "title": "الإعدادات",
-            "selectLanguage": "اختر اللغة المطلوبة:",
-            "selectAIModel": "اختر نموذج الذكاء الاصطناعي:",
-            "version": "الإصدار"
-        },
-        "userForm": {
-            "requiredInfo": "الحقول التي تحتوي على <span class='required'>*</span> مطلوبة!",
-            "birthDate": "تاريخ الميلاد",
-            "gender": "الجنس",
-            "selectGender": "اختر الجنس",
-            "male": "ذكر",
-            "female": "أنثى",
-            "height": "الطول",
-            "weight": "الوزن",
-            "placeholderHeight": "مثال: 175",
-            "placeholderWeight": "مثال: 70",
-            "showExtra": "عرض المزيد من المعلومات",
-            "hideExtra": "إخفاء المزيد من المعلومات",
-            "acceptPrivacy": "أوافق على",
-            "privacyLink": "سياسة الخصوصية",
-            "submitData": "إرسال البيانات",
-            "abort": "إيقاف الإجابة",
-            "exportData": "تصدير البيانات",
-            "invalidHeight": "يجب أن يتراوح الطول بين 50 سم و300 سم.",
-            "invalidWeight": "يجب أن يتراوح الوزن بين 1 كجم و500 كجم.",
-            "invalidWaterIntake": "يجب أن يكون استهلاك الماء اليومي بين 0 و50 لترًا.",
-            "invalidHeartRate": "يجب أن يتراوح معدل ضربات القلب بين 30 و250.",
-            "invalidSleep": "يجب أن يتراوح وقت النوم بين 0 و24 ساعة.",
-            "invalidBloodPressure": "يجب أن يكون ضغط الدم بالشكل التالي: الانقباضي/الانبساطي (مثال: 120/80)."
-        }
+  "components": {
+    "chatInterface": {
+      "placeholder": "اكتب رسالتك..."
     },
-    "global": {
-        "successSave": "تم الحفظ بنجاح",
-        "successShare": "تم الإرسال بنجاح",
-        "errorSave": "حدث خطأ أثناء الحفظ.",
-        "errorSend": "حدث خطأ أثناء إرسال البيانات",
-        "tryAgain": "يرجى المحاولة مرة أخرى لاحقًا أو تحديث الصفحة.",
-        "emptyResponse": "لم يتم استلام رد من الخادم. ربما حدث انقطاع.",
-        "networkError": "خطأ في الشبكة - تحقق من اتصال الإنترنت!",
-        "unknownError": "حدث خطأ غير معروف. 😔",
-        "errorLoad": "الملف لا يحتوي على بيانات صالحة!",
-        "invalidJson": "تنسيق الملف غير صحيح! تأكد من أنك قمت بتحميل ملف JSON.",
-        "anotherFile": "حاول مرة أخرى أو اختر ملفًا آخر.",
-        "needPermission": "يرجى منح إذن الوصول إلى التخزين."
+    "clickMenu": {
+      "showForm": "عرض نموذج جمع البيانات",
+      "showChat": "عرض واجهة المحادثة"
+    },
+    "fileUpload": {
+      "title": "قم بتحميل بياناتك",
+      "upload": "اختر ملفًا أو اسحبه هنا",
+      "lastLoaded": "تم التحميل آخر مرة"
+    },
+    "header": {
+      "settings": "الإعدادات"
+    },
+    "optionalFields": {
+      "heartRate": "متوسط معدل ضربات القلب",
+      "placeholderHeartRate": "مثال: 76",
+      "bloodPressure": "متوسط ضغط الدم",
+      "placeholderBloodPressure": "مثال: 120/80",
+      "sports": "الرياضات",
+      "placeholderSports": "مثال: الجري، السباحة",
+      "medications": "الأدوية",
+      "placeholderMedications": "مثال: أسبيرين، باراسيتامول",
+      "chronicDiseases": "الأمراض المزمنة",
+      "placeholderChronicDiseases": "مثال: ارتفاع ضغط الدم، السكري",
+      "allergies": "الحساسيات",
+      "placeholderAllergies": "مثال: حبوب اللقاح، الجوز",
+      "diet": "النظام الغذائي",
+      "placeholderDiet": "مثال: نباتي، خالٍ من الغلوتين",
+      "waterIntake": "كمية الماء اليومية (لتر)",
+      "placeholderWaterIntake": "مثال: 2.5",
+      "familyHistory": "تاريخ العائلة الطبي",
+      "placeholderFamilyHistory": "مثال: أمراض قلب، سرطان",
+      "smoking": "التدخين",
+      "smokingOptions": {
+        "selectPlaceholder": "اختر عادة التدخين",
+        "never": "أبدًا",
+        "occasionally": "أحيانًا",
+        "regularly": "بشكل منتظم"
+      },
+      "alcohol": "استهلاك الكحول",
+      "alcoholOptions": {
+        "selectPlaceholder": "اختر عادة استهلاك الكحول",
+        "never": "أبدًا",
+        "occasionally": "أحيانًا",
+        "regularly": "بشكل منتظم"
+      },
+      "sleep": "النوم (ساعات/يوم)",
+      "placeholderSleep": "مثال: 7",
+      "physicalActivityLevel": "مستوى النشاط البدني",
+      "placeholderPhysicalActivityLevel": "مثال: منخفض، متوسط، مرتفع",
+      "workType": "نوع العمل",
+      "placeholderWorkType": "مثال: مكتبي، بدني، مختلط",
+      "stressLevel": "مستوى التوتر",
+      "placeholderStressLevel": "مثال: منخفض، متوسط، مرتفع / 30، 60، 90",
+      "mentalHealth": "الصحة النفسية",
+      "placeholderMentalHealth": "مثال: اكتئاب، قلق",
+      "cholesterolLevel": "مستوى الكوليسترول",
+      "placeholderCholesterolLevel": "مثال: 200 ملغم/ديسيلتر",
+      "bloodSugarLevel": "مستوى السكر في الدم",
+      "placeholderBloodSugarLevel": "مثال: 100 ملغم/ديسيلتر",
+      "supplements": "المكملات الغذائية",
+      "placeholderSupplements": "مثال: فيتامين D، أوميغا‑3",
+      "vaccinations": "اللقاحات",
+      "placeholderVaccinations": "مثال: الإنفلونزا، COVID‑19",
+      "reproductiveHealth": "الصحة الإنجابية",
+      "placeholderReproductiveHealth": "مثال: الدورة الشهرية، الحمل",
+      "visionAndHearing": "البصر والسمع",
+      "placeholderVisionAndHearing": "مثال: قصر النظر، ضعف السمع",
+      "sleepQuality": "جودة النوم",
+      "placeholderSleepQuality": "مثال: جيد، متوسط، ضعيف",
+      "medicalRecords": "السجلات الطبية",
+      "placeholderMedicalRecords": "مثال: تحليل دم، أشعة",
+      "medicalHistory": "التاريخ الطبي",
+      "placeholderMedicalHistory": "مثال: عمليات جراحية، علاجات في المستشفى"
+    },
+    "privacyModal": {
+      "title": "إشعار الخصوصية",
+      "text1": "ستُستخدم البيانات التي تقدمها فقط من قبل نظام الاستشارات الصحية، ولا تُشارك مع جهات خارجية. يتمّ عدم تخزين بياناتك في النظام؛ يمكنك إدارتها وحفظها على جهازك.",
+      "text2": "بموافقتك على شروط الخصوصية، فإنك تسمح للنظام بتقديم نصائح بناءً على المعلومات التي تقدمها."
+    },
+    "response": {
+      "title": "رد د. Sanovise:",
+      "analyzing": "أقوم بتحليل البيانات 📚🧠",
+      "thinking": "أفكر 🤔"
+    },
+    "settingsModal": {
+      "title": "الإعدادات",
+      "selectLanguage": "اختر اللغة المطلوبة:",
+      "selectAIModel": "اختر نموذج الذكاء الاصطناعي:",
+      "version": "الإصدار"
+    },
+    "userForm": {
+      "requiredInfo": "الحقول الموسومة بـ <span class='required'>*</span> إلزامية!",
+      "birthDate": "تاريخ الميلاد",
+      "gender": "الجنس",
+      "selectGender": "اختر الجنس",
+      "male": "ذكر",
+      "female": "أنثى",
+      "height": "الطول",
+      "weight": "الوزن",
+      "placeholderHeight": "مثال: 175",
+      "placeholderWeight": "مثال: 70",
+      "showExtra": "إدخال بيانات إضافية",
+      "hideExtra": "إخفاء البيانات الإضافية",
+      "acceptPrivacy": "أوافق على",
+      "privacyLink": "سياسة الخصوصية",
+      "submitData": "إرسال البيانات",
+      "abort": "لا ترد",
+      "exportData": "تصدير البيانات",
+      "invalidHeight": "يجب أن يكون الطول بين 50 سم و300 سم.",
+      "invalidWeight": "يجب أن يكون الوزن بين 1 كجم و500 كجم.",
+      "invalidWaterIntake": "يجب أن تكون كمية الماء اليومية بين 0 و50 لتر.",
+      "invalidHeartRate": "يجب أن يكون معدل ضربات القلب بين 30 و250.",
+      "invalidSleep": "يجب أن يكون وقت النوم بين 0 و24 ساعة.",
+      "invalidBloodPressure": "يجب أن يكون ضغط الدم بالشكل: systole/diastole (مثال: 120/80)."
     }
+  },
+  "global": {
+    "successSave": "تم الحفظ بنجاح",
+    "successShare": "تم الإرسال بنجاح",
+    "errorSave": "حدث خطأ أثناء الحفظ.",
+    "errorSend": "حدث خطأ أثناء إرسال البيانات",
+    "tryAgain": "يرجى المحاولة مرة أخرى لاحقًا، أو تحديث الصفحة.",
+    "emptyResponse": "لم يتلقَّ الخادم أي رد. قد يكون هناك انقطاع.",
+    "networkError": "خطأ في الشبكة – تحقق من اتصال الإنترنت!",
+    "unknownError": "حدث خطأ غير معروف. 😔",
+    "errorLoad": "الملف لا يحتوي على بيانات صالحة!",
+    "invalidJson": "تنسيق الملف غير صالح! يرجى التأكد أنك رفعت ملف JSON فعلي.",
+    "anotherFile": "يرجى المحاولة مرة أخرى أو اختيار ملف آخر.",
+    "needPermission": "يرجى السماح بالوصول إلى وحدة التخزين."
+  }
 }
