--- a/app/locales/hi-IN.json
+++ b/app/locales/hi-IN.json
@@ -1,135 +1,136 @@
 {
-    "components": {
-        "chatInterface": {
-            "placeholder": "अपना संदेश लिखें..."
-        },
-        "clickMenu": {
-            "showForm": "डेटा फ़ॉर्म दिखाएँ",
-            "showChat": "चैट इंटरफ़ेस दिखाएँ"
-        },
-        "fileUpload": {
-            "title": "अपने डेटा अपलोड करें",
-            "upload": "फ़ाइल चुनें या यहां खींचें",
-            "lastLoaded": "अंतिम बार लोड किया गया"
-        },
-        "header": {
-            "settings": "सेटिंग्स"
-        },
-        "optionalFields": {
-            "heartRate": "हृदय गति",
-            "placeholderHeartRate": "अपनी हृदय गति दर्ज करें",
-            "bloodPressure": "रक्तचाप",
-            "placeholderBloodPressure": "अपना रक्तचाप दर्ज करें, जैसे: 120/80",
-            "sports": "खेल",
-            "placeholderSports": "आप कौन-कौन से खेल खेलते हैं?",
-            "medications": "दवाइयाँ",
-            "placeholderMedications": "अपनी दवाइयाँ दर्ज करें",
-            "chronicDiseases": "दीर्घकालिक रोग",
-            "placeholderChronicDiseases": "अपने दीर्घकालिक रोग दर्ज करें",
-            "allergies": "एलर्जी",
-            "placeholderAllergies": "अपनी एलर्जी दर्ज करें",
-            "diet": "आहार",
-            "placeholderDiet": "अपना आहार दर्ज करें",
-            "waterIntake": "दैनिक पानी की खपत (लीटर)",
-            "placeholderWaterIntake": "अपनी दैनिक पानी की खपत दर्ज करें",
-            "familyHistory": "पारिवारिक इतिहास",
-            "placeholderFamilyHistory": "अपना पारिवारिक इतिहास दर्ज करें",
-            "smoking": "धूम्रपान",
-            "smokingOptions": {
-                "never": "कभी नहीं",
-                "occasionally": "कभी-कभी",
-                "regularly": "नियमित रूप से"
-            },
-            "selectPlaceholder": "चयन करें",
-            "alcohol": "शराब का सेवन",
-            "alcoholOptions": {
-                "never": "कभी नहीं",
-                "occasionally": "कभी-कभी",
-                "regularly": "नियमित रूप से"
-            },
-            "sleep": "नींद (घंटे/दिन)",
-            "placeholderSleep": "अपनी दैनिक नींद का समय दर्ज करें",
-            "physicalActivityLevel": "शारीरिक गतिविधि स्तर",
-            "placeholderPhysicalActivityLevel": "अपना गतिविधि स्तर दर्ज करें",
-            "workType": "कार्य का प्रकार",
-            "placeholderWorkType": "अपना कार्य प्रकार दर्ज करें",
-            "stressLevel": "तनाव स्तर",
-            "placeholderStressLevel": "अपना तनाव स्तर दर्ज करें",
-            "mentalHealth": "मानसिक स्वास्थ्य",
-            "placeholderMentalHealth": "अपनी मानसिक स्थिति दर्ज करें",
-            "cholesterolLevel": "कोलेस्ट्रॉल स्तर",
-            "placeholderCholesterolLevel": "अपना कोलेस्ट्रॉल स्तर दर्ज करें",
-            "bloodSugarLevel": "रक्त शर्करा स्तर",
-            "placeholderBloodSugarLevel": "अपना रक्त शर्करा स्तर दर्ज करें",
-            "supplements": "पूरक आहार",
-            "placeholderSupplements": "अपने पूरक आहार दर्ज करें",
-            "vaccinations": "टीकाकरण",
-            "placeholderVaccinations": "अपने टीकाकरण दर्ज करें",
-            "reproductiveHealth": "प्रजनन स्वास्थ्य",
-            "placeholderReproductiveHealth": "अपना प्रजनन स्वास्थ्य दर्ज करें",
-            "visionAndHearing": "दृष्टि और श्रवण",
-            "placeholderVisionAndHearing": "अपनी दृष्टि और श्रवण समस्याएँ दर्ज करें",
-            "sleepQuality": "नींद की गुणवत्ता",
-            "placeholderSleepQuality": "अपनी नींद की गुणवत्ता दर्ज करें",
-            "medicalRecords": "चिकित्सा रिकॉर्ड",
-            "placeholderMedicalRecords": "अपने चिकित्सा रिकॉर्ड दर्ज करें",
-            "medicalHistory": "चिकित्सा इतिहास",
-            "placeholderMedicalHistory": "अपना चिकित्सा इतिहास दर्ज करें"
-        },
-        "privacyModal": {
-            "title": "हमारी गोपनीयता नीति",
-            "text1": "आपके द्वारा प्रदान किए गए डेटा का उपयोग केवल स्वास्थ्य सलाह प्रणाली द्वारा किया जाएगा और इसे किसी तीसरे पक्ष के साथ साझा नहीं किया जाएगा। आपका डेटा संग्रहीत नहीं किया जाएगा; आप स्वयं इसे प्रबंधित और अपने डिवाइस पर सहेज सकते हैं।",
-            "text2": "गोपनीयता नीति को स्वीकार करके, आप सहमति देते हैं कि हमारा सिस्टम आपके द्वारा प्रदान की गई जानकारी के आधार पर सलाह दे।"
-        },
-        "response": {
-            "title": "डॉ. Sanovise का उत्तर:",
-            "analyzing": "डेटा का विश्लेषण कर रहा हूँ 📚🧠",
-            "thinking": "सोच रहा हूँ 🤔"
-        },
-        "settingsModal": {
-            "title": "सेटिंग्स",
-            "selectLanguage": "अपनी पसंदीदा भाषा चुनें:",
-            "selectAIModel": "अपना पसंदीदा एआई मॉडल चुनें:",
-            "version": "संस्करण"
-        },
-        "userForm": {
-            "requiredInfo": "<span class='required'>*</span> चिह्नित फ़ील्ड भरना अनिवार्य है!",
-            "birthDate": "जन्म तिथि",
-            "gender": "लिंग",
-            "selectGender": "लिंग चुनें",
-            "male": "पुरुष",
-            "female": "महिला",
-            "height": "कद",
-            "weight": "वजन",
-            "placeholderHeight": "जैसे: 175",
-            "placeholderWeight": "जैसे: 70",
-            "showExtra": "अतिरिक्त जानकारी दर्ज करें",
-            "hideExtra": "अतिरिक्त जानकारी छुपाएँ",
-            "acceptPrivacy": "मैं स्वीकार करता हूँ",
-            "privacyLink": "गोपनीयता नीति",
-            "submitData": "डेटा सबमिट करें",
-            "abort": "उत्तर रद्द करें",
-            "exportData": "डेटा निर्यात करें",
-            "invalidHeight": "कद 50 सेमी से 300 सेमी के बीच होना चाहिए।",
-            "invalidWeight": "वजन 1 किग्रा से 500 किग्रा के बीच होना चाहिए।",
-            "invalidWaterIntake": "दैनिक पानी की खपत 0 से 50 लीटर के बीच होनी चाहिए।",
-            "invalidHeartRate": "हृदय गति 30 से 250 के बीच होनी चाहिए।",
-            "invalidSleep": "नींद का समय 0 से 24 घंटे के बीच होना चाहिए।",
-            "invalidBloodPressure": "रक्तचाप का प्रारूप इस तरह होना चाहिए: सिस्टोलिक/डायस्टोलिक (जैसे: 120/80)।"
-        }
+  "components": {
+    "chatInterface": {
+      "placeholder": "अपना संदेश लिखें..."
     },
-    "global": {
-        "successSave": "सफलतापूर्वक सहेजा गया",
-        "successShare": "सफलतापूर्वक भेजा गया",
-        "errorSave": "डेटा सहेजते समय त्रुटि हुई।",
-        "errorSend": "डेटा भेजते समय त्रुटि हुई।",
-        "tryAgain": "कृपया बाद में पुनः प्रयास करें या पृष्ठ को रीफ्रेश करें।",
-        "emptyResponse": "सर्वर ने कोई उत्तर नहीं भेजा। संभवतः कुछ समस्या हुई है।",
-        "networkError": "नेटवर्क त्रुटि – कृपया अपना इंटरनेट कनेक्शन जांचें!",
-        "unknownError": "एक अज्ञात त्रुटि हुई। 😔",
-        "errorLoad": "फ़ाइल में वैध डेटा नहीं है!",
-        "invalidJson": "फ़ाइल प्रारूप अमान्य है! कृपया सुनिश्चित करें कि आपने एक JSON फ़ाइल अपलोड की है।",
-        "anotherFile": "कृपया पुनः प्रयास करें या दूसरी फ़ाइल चुनें।",
-        "needPermission": "कृपया स्टोरेज एक्सेस की अनुमति दें।"
+    "clickMenu": {
+      "showForm": "डेटा इनपुट फ़ॉर्म दिखाएं",
+      "showChat": "चैट इंटरफ़ेस दिखाएं"
+    },
+    "fileUpload": {
+      "title": "अपने डेटा अपलोड करें",
+      "upload": "फ़ाइल चुनें या यहाँ खींचें",
+      "lastLoaded": "अंतिम बार लोड किया गया"
+    },
+    "header": {
+      "settings": "सेटिंग्स"
+    },
+    "optionalFields": {
+      "heartRate": "औसत हृदय गति",
+      "placeholderHeartRate": "उदा.: 76",
+      "bloodPressure": "औसत रक्तचाप",
+      "placeholderBloodPressure": "उदा.: 120/80",
+      "sports": "खेल",
+      "placeholderSports": "उदा.: दौड़ना, तैराकी",
+      "medications": "दवाइयाँ",
+      "placeholderMedications": "उदा.: एस्पिरिन, पैरासिटामोल",
+      "chronicDiseases": "दीर्घकालिक बीमारियाँ",
+      "placeholderChronicDiseases": "उदा.: उच्च रक्तचाप, मधुमेह",
+      "allergies": "एलर्जी",
+      "placeholderAllergies": "उदा.: पराग, मेवा",
+      "diet": "आहार",
+      "placeholderDiet": "उदा.: शाकाहारी, ग्लूटेन मुक्त",
+      "waterIntake": "दैनिक पानी का सेवन (लीटर)",
+      "placeholderWaterIntake": "उदा.: 2.5",
+      "familyHistory": "पारिवारिक रोग इतिहास",
+      "placeholderFamilyHistory": "उदा.: हृदय रोग, कैंसर",
+      "smoking": "धूम्रपान",
+      "smokingOptions": {
+        "selectPlaceholder": "धूम्रपान की आदत चुनें",
+        "never": "कभी नहीं",
+        "occasionally": "कभी-कभी",
+        "regularly": "नियमित रूप से"
+      },
+      "alcohol": "शराब सेवन",
+      "alcoholOptions": {
+        "selectPlaceholder": "शराब सेवन की आदत चुनें",
+        "never": "कभी नहीं",
+        "occasionally": "कभी-कभी",
+        "regularly": "नियमित रूप से"
+      },
+      "sleep": "नींद (घंटे/दिन)",
+      "placeholderSleep": "उदा.: 7",
+      "physicalActivityLevel": "शारीरिक गतिविधि स्तर",
+      "placeholderPhysicalActivityLevel": "उदा.: कम, मध्यम, उच्च",
+      "workType": "काम का प्रकार",
+      "placeholderWorkType": "उदा.: कार्यालय, शारीरिक, मिश्रित",
+      "stressLevel": "तनाव स्तर",
+      "placeholderStressLevel": "उदा.: कम, मध्यम, उच्च / 30, 60, 90",
+      "mentalHealth": "मानसिक स्वास्थ्य",
+      "placeholderMentalHealth": "उदा.: अवसाद, चिंता",
+      "cholesterolLevel": "कोलेस्ट्रॉल स्तर",
+      "placeholderCholesterolLevel": "उदा.: 200 mg/dL",
+      "bloodSugarLevel": "रक्त शर्करा स्तर",
+      "placeholderBloodSugarLevel": "उदा.: 100 mg/dL",
+      "supplements": "पूरक आहार",
+      "placeholderSupplements": "उदा.: विटामिन D, ओमेगा‑3",
+      "vaccinations": "टीकाकरण",
+      "placeholderVaccinations": "उदा.: फ्लू, COVID‑19",
+      "reproductiveHealth": "प्रजनन स्वास्थ्य",
+      "placeholderReproductiveHealth": "उदा.: मासिक धर्म चक्र, गर्भावस्था",
+      "visionAndHearing": "दृष्टि और श्रवण",
+      "placeholderVisionAndHearing": "उदा.: निकट दृष्टि दोष, सुनने में कमी",
+      "sleepQuality": "नींद की गुणवत्ता",
+      "placeholderSleepQuality": "उदा.: अच्छी, सामान्य, खराब",
+      "medicalRecords": "चिकित्सा रिकॉर्ड",
+      "placeholderMedicalRecords": "उदा.: रक्त परीक्षण, एक्स-रे",
+      "medicalHistory": "चिकित्सा इतिहास",
+      "placeholderMedicalHistory": "उदा.: सर्जरी, अस्पताल में भर्ती"
+    },
+    "privacyModal": {
+      "title": "हमारी गोपनीयता नीति",
+      "text1": "आपके द्वारा प्रदान की गई जानकारी केवल स्वास्थ्य परामर्श प्रणाली द्वारा उपयोग की जाती है और किसी तीसरे पक्ष के साथ साझा नहीं की जाती। आपकी जानकारी को सिस्टम द्वारा संग्रहीत नहीं किया जाता — आप इसे स्वयं प्रबंधित कर सकते हैं और अपने डिवाइस पर सहेज सकते हैं।",
+      "text2": "गोपनीयता नीति को स्वीकार करके, आप सहमति देते हैं कि प्रणाली आपके द्वारा दी गई जानकारी के आधार पर सलाह प्रदान कर सकती है।"
+    },
+    "response": {
+      "title": "डॉ. सानोवाइज़ का उत्तर:",
+      "analyzing": "डेटा का विश्लेषण कर रहा हूँ 📚🧠",
+      "thinking": "सोच रहा हूँ 🤔"
+    },
+    "settingsModal": {
+      "title": "सेटिंग्स",
+      "selectLanguage": "अपनी पसंदीदा भाषा चुनें:",
+      "selectAIModel": "अपना पसंदीदा एआई मॉडल चुनें:",
+      "version": "संस्करण"
+    },
+    "userForm": {
+      "requiredInfo": "<span class='required'>*</span> चिह्नित फ़ील्ड आवश्यक हैं!",
+      "birthDate": "जन्म तिथि",
+      "gender": "लिंग",
+      "selectGender": "लिंग चुनें",
+      "male": "पुरुष",
+      "female": "महिला",
+      "height": "ऊंचाई",
+      "weight": "वज़न",
+      "placeholderHeight": "उदा.: 175",
+      "placeholderWeight": "उदा.: 70",
+      "showExtra": "अतिरिक्त डेटा दिखाएं",
+      "hideExtra": "अतिरिक्त डेटा छिपाएं",
+      "acceptPrivacy": "मैं स्वीकार करता/करती हूँ",
+      "privacyLink": "गोपनीयता नीति",
+      "submitData": "डेटा सबमिट करें",
+      "abort": "उत्तर न दें",
+      "exportData": "डेटा निर्यात करें",
+      "invalidHeight": "ऊंचाई 50 से 300 सेमी के बीच होनी चाहिए।",
+      "invalidWeight": "वज़न 1 से 500 किग्रा के बीच होना चाहिए।",
+      "invalidWaterIntake": "दैनिक पानी का सेवन 0 से 50 लीटर के बीच होना चाहिए।",
+      "invalidHeartRate": "हृदय गति 30 से 250 के बीच होनी चाहिए।",
+      "invalidSleep": "नींद की अवधि 0 से 24 घंटे के बीच होनी चाहिए।",
+      "invalidBloodPressure": "रक्तचाप का फ़ॉर्मेट systole/diastole होना चाहिए (उदा.: 120/80)।"
     }
+  },
+  "global": {
+    "successSave": "सफलतापूर्वक सहेजा गया",
+    "successShare": "सफलतापूर्वक भेजा गया",
+    "errorSave": "सेव करते समय त्रुटि हुई।",
+    "errorSend": "डेटा भेजते समय त्रुटि हुई।",
+    "tryAgain": "कृपया बाद में पुनः प्रयास करें या पेज रीफ़्रेश करें।",
+    "emptyResponse": "सर्वर से कोई प्रतिक्रिया नहीं मिली। कनेक्शन टूट गया हो सकता है।",
+    "networkError": "नेटवर्क त्रुटि – कृपया अपना इंटरनेट कनेक्शन जांचें!",
+    "unknownError": "अज्ञात त्रुटि हुई। 😔",
+    "errorLoad": "फ़ाइल में मान्य डेटा नहीं है!",
+    "invalidJson": "अमान्य फ़ाइल प्रारूप! कृपया सुनिश्चित करें कि आपने JSON फ़ाइल अपलोड की है।",
+    "anotherFile": "कृपया पुनः प्रयास करें या कोई दूसरी फ़ाइल चुनें।",
+    "needPermission": "कृपया स्टोरेज एक्सेस की अनुमति दें।"
+  }
 }
