--- a/app/locales/hu-HU.json
+++ b/app/locales/hu-HU.json
@@ -9,7 +9,7 @@
         },
         "fileUpload": {
             "title": "Töltse fel adatait",
-            "upload": "Válasszon fájlt vagy húzza ide",
+            "upload": "Válassz fájlt vagy húzza ide",
             "lastLoaded": "Utoljára betöltve"
         },
         "header": {
@@ -17,64 +17,65 @@
         },
         "optionalFields": {
             "heartRate": "Átlag pulzusszám",
-            "placeholderHeartRate": "Írd be az átlag pulzusszámod",
+            "placeholderHeartRate": "pl.: 76",
             "bloodPressure": "Átlag vérnyomás",
-            "placeholderBloodPressure": "Írd be az átlag vérnyomásod pl. 120/80",
+            "placeholderBloodPressure": "pl.: 120/80",
             "sports": "Sportok",
-            "placeholderSports": "Milyen sportokat űzöl?",
+            "placeholderSports": "pl.: Futás, úszás",
             "medications": "Gyógyszerek",
-            "placeholderMedications": "Írd be a szedett gyógyszereidet",
+            "placeholderMedications": "pl.: Aspirin, Paracetamol",
             "chronicDiseases": "Krónikus betegségek",
-            "placeholderChronicDiseases": "Írd be a krónikus betegségeidet",
+            "placeholderChronicDiseases": "pl.: Magas vérnyomás, Cukorbetegség",
             "allergies": "Allergiák",
-            "placeholderAllergies": "Írd be az allergiáidat",
+            "placeholderAllergies": "pl.: Pollen, Dió",
             "diet": "Diéta",
-            "placeholderDiet": "Írd be a követett diétát",
+            "placeholderDiet": "pl.: Vegetáriánus, Gluténmentes",
             "waterIntake": "Napi vízfogyasztás (liter)",
-            "placeholderWaterIntake": "Add meg a napi vízfogyasztásod",
+            "placeholderWaterIntake": "pl.: 2.5",
             "familyHistory": "Családi kórtörténet",
-            "placeholderFamilyHistory": "Írd be a családi kórtörténeted",
+            "placeholderFamilyHistory": "pl.: Szívbetegség, Rák",
             "smoking": "Dohányzás",
             "smokingOptions": {
+                "selectPlaceholder": "Válassz dohányzási szokást",
                 "never": "Soha",
                 "occasionally": "Alkalmanként",
                 "regularly": "Rendszeresen"
             },
-            "selectPlaceholder": "Válassz",
             "alcohol": "Alkoholfogyasztás",
             "alcoholOptions": {
+                "selectPlaceholder": "Válassz alkoholfogyasztási szokást",
                 "never": "Soha",
                 "occasionally": "Alkalmanként",
                 "regularly": "Rendszeresen"
             },
             "sleep": "Alvás (óra/nap)",
-            "placeholderSleep": "Írd be az alvásod napi mennyiségét",
+            "placeholderSleep": "pl.: 7",
             "physicalActivityLevel": "Fizikai aktivitás szintje",
-            "placeholderPhysicalActivityLevel": "Írd be az aktivitás szinted",
+            "placeholderPhysicalActivityLevel": "pl.: Alacsony, Közepes, Magas",
             "workType": "Munka típusa",
-            "placeholderWorkType": "Írd be a munkád típusát",
+            "placeholderWorkType": "pl.: Irodai, Fizikai, Vegyes",
             "stressLevel": "Stressz szint",
-            "placeholderStressLevel": "Írd be a stressz szinted",
+            "placeholderStressLevel": "pl.: Alacsony, Közepes, Magas / 30, 60, 90",
             "mentalHealth": "Mentális egészség",
-            "placeholderMentalHealth": "Írd be a mentális állapotod",
+            "placeholderMentalHealth": "pl.: Depresszió, Szorongás",
             "cholesterolLevel": "Koleszterinszint",
-            "placeholderCholesterolLevel": "Írd be a koleszterinszinted",
+            "placeholderCholesterolLevel": "pl.: 200 mg/dL",
             "bloodSugarLevel": "Vércukorszint",
-            "placeholderBloodSugarLevel": "Írd be a vércukorszinted",
+            "placeholderBloodSugarLevel": "pl.: 100 mg/dL",
             "supplements": "Táplálékkiegészítők",
-            "placeholderSupplements": "Írd be a szedett táplálékkiegészítőket",
+            "placeholderSupplements": "pl.: Vitamin D, Omega-3",
             "vaccinations": "Oltások",
-            "placeholderVaccinations": "Írd be a kapott oltásokat",
+            "placeholderVaccinations": "pl.: Influenza, COVID-19",
             "reproductiveHealth": "Reproduktív egészség",
-            "placeholderReproductiveHealth": "Írd be a reproduktív egészséged",
+            "placeholderReproductiveHealth": "pl.: Menstruációs ciklus, Terhesség",
             "visionAndHearing": "Látás és hallás",
-            "placeholderVisionAndHearing": "Írd be a látás- és hallásproblémáid",
+            "placeholderVisionAndHearing": "pl.: Rövidlátás, Halláscsökkenés",
             "sleepQuality": "Alvásminőség",
-            "placeholderSleepQuality": "Írd be az alvásod minőségét",
+            "placeholderSleepQuality": "pl.: Jó, Közepes, Rossz",
             "medicalRecords": "Orvosi leletek",
-            "placeholderMedicalRecords": "Írd be az orvosi leleteidet",
+            "placeholderMedicalRecords": "pl.: Vérvétel, Röntgen",
             "medicalHistory": "Orvosi előzmények",
-            "placeholderMedicalHistory": "Írd be a korábbi betegségeidet"
+            "placeholderMedicalHistory": "pl.: Műtétek, Kórházi kezelések"
         },
         "privacyModal": {
             "title": "Adatvédelmi tájékoztatónk",
@@ -96,7 +97,7 @@
             "requiredInfo": "A <span class='required'>*</span>-gal jelölt mezők kitöltése kötelező!",
             "birthDate": "Születési dátum",
             "gender": "Nem",
-            "selectGender": "Válasszon nemet",
+            "selectGender": "Válassz nemet",
             "male": "Férfi",
             "female": "Nő",
             "height": "Magasság",
