--- a/app/locales/de-DE.json
+++ b/app/locales/de-DE.json
@@ -1,135 +1,136 @@
 {
-    "components": {
-        "chatInterface": {
-            "placeholder": "Geben Sie Ihre Nachricht ein..."
-        },
-        "clickMenu": {
-            "showForm": "Eingabeformular anzeigen",
-            "showChat": "Chat-Oberfläche anzeigen"
-        },
-        "fileUpload": {
-            "title": "Laden Sie Ihre Daten hoch",
-            "upload": "Datei auswählen oder hierher ziehen",
-            "lastLoaded": "Zuletzt geladen"
-        },
-        "header": {
-            "settings": "Einstellungen"
-        },
-        "optionalFields": {
-            "heartRate": "Herzfrequenz",
-            "placeholderHeartRate": "Geben Sie Ihre Herzfrequenz ein",
-            "bloodPressure": "Blutdruck",
-            "placeholderBloodPressure": "Geben Sie Ihren Blutdruck ein, z. B. 120/80",
-            "sports": "Sportarten",
-            "placeholderSports": "Welche Sportarten betreiben Sie?",
-            "medications": "Medikamente",
-            "placeholderMedications": "Geben Sie Ihre Medikamente ein",
-            "chronicDiseases": "Chronische Krankheiten",
-            "placeholderChronicDiseases": "Geben Sie Ihre chronischen Krankheiten ein",
-            "allergies": "Allergien",
-            "placeholderAllergies": "Geben Sie Ihre Allergien ein",
-            "diet": "Diät",
-            "placeholderDiet": "Geben Sie Ihre Diät ein",
-            "waterIntake": "Täglicher Wasserkonsum (Liter)",
-            "placeholderWaterIntake": "Geben Sie Ihren täglichen Wasserkonsum ein",
-            "familyHistory": "Familienanamnese",
-            "placeholderFamilyHistory": "Geben Sie Ihre Familienanamnese ein",
-            "smoking": "Rauchen",
-            "smokingOptions": {
-                "never": "Nie",
-                "occasionally": "Gelegentlich",
-                "regularly": "Regelmäßig"
-            },
-            "selectPlaceholder": "Wählen",
-            "alcohol": "Alkoholkonsum",
-            "alcoholOptions": {
-                "never": "Nie",
-                "occasionally": "Gelegentlich",
-                "regularly": "Regelmäßig"
-            },
-            "sleep": "Schlaf (Stunden/Tag)",
-            "placeholderSleep": "Geben Sie Ihre tägliche Schlafdauer ein",
-            "physicalActivityLevel": "Körperliche Aktivitätsstufe",
-            "placeholderPhysicalActivityLevel": "Geben Sie Ihr Aktivitätsniveau ein",
-            "workType": "Arten von Arbeit",
-            "placeholderWorkType": "Geben Sie Ihre Arbeitsart ein",
-            "stressLevel": "Stresslevel",
-            "placeholderStressLevel": "Geben Sie Ihr Stresslevel ein",
-            "mentalHealth": "Psychische Gesundheit",
-            "placeholderMentalHealth": "Geben Sie Ihren psychischen Zustand ein",
-            "cholesterolLevel": "Cholesterinspiegel",
-            "placeholderCholesterolLevel": "Geben Sie Ihren Cholesterinspiegel ein",
-            "bloodSugarLevel": "Blutzuckerspiegel",
-            "placeholderBloodSugarLevel": "Geben Sie Ihren Blutzuckerspiegel ein",
-            "supplements": "Nahrungsergänzungsmittel",
-            "placeholderSupplements": "Geben Sie Ihre Nahrungsergänzungsmittel ein",
-            "vaccinations": "Impfungen",
-            "placeholderVaccinations": "Geben Sie Ihre Impfungen ein",
-            "reproductiveHealth": "Reproduktive Gesundheit",
-            "placeholderReproductiveHealth": "Geben Sie Ihre reproduktive Gesundheit ein",
-            "visionAndHearing": "Sehen und Hören",
-            "placeholderVisionAndHearing": "Geben Sie Ihre Seh- und Hörprobleme ein",
-            "sleepQuality": "Schlafqualität",
-            "placeholderSleepQuality": "Geben Sie Ihre Schlafqualität ein",
-            "medicalRecords": "Medizinische Unterlagen",
-            "placeholderMedicalRecords": "Geben Sie Ihre medizinischen Unterlagen ein",
-            "medicalHistory": "Medizinische Vorgeschichte",
-            "placeholderMedicalHistory": "Geben Sie Ihre bisherigen Erkrankungen ein"
-        },
-        "privacyModal": {
-            "title": "Unsere Datenschutzerklärung",
-            "text1": "Die von Ihnen angegebenen Daten werden ausschließlich vom Gesundheitssystem verwendet und nicht an Dritte weitergegeben. Ihre Daten werden nicht gespeichert – Sie können diese verwalten und auf Ihr eigenes Gerät speichern.",
-            "text2": "Mit der Annahme der Datenschutzbedingungen stimmen Sie zu, dass unser System Ihnen auf Basis Ihrer Angaben Ratschläge erteilen darf."
-        },
-        "response": {
-            "title": "Antwort von Dr. Sanovise:",
-            "analyzing": "Daten werden analysiert 📚🧠",
-            "thinking": "Ich denke nach 🤔"
-        },
-        "settingsModal": {
-            "title": "Einstellungen",
-            "selectLanguage": "Wählen Sie die gewünschte Sprache:",
-            "selectAIModel": "Wählen Sie das gewünschte KI-Modell:",
-            "version": "Version"
-        },
-        "userForm": {
-            "requiredInfo": "Felder mit <span class='required'>*</span> sind Pflichtfelder!",
-            "birthDate": "Geburtsdatum",
-            "gender": "Geschlecht",
-            "selectGender": "Geschlecht auswählen",
-            "male": "Männlich",
-            "female": "Weiblich",
-            "height": "Größe",
-            "weight": "Gewicht",
-            "placeholderHeight": "z.B.: 175",
-            "placeholderWeight": "z.B.: 70",
-            "showExtra": "Weitere Daten eingeben",
-            "hideExtra": "Weitere Daten ausblenden",
-            "acceptPrivacy": "Ich akzeptiere die",
-            "privacyLink": "Datenschutzrichtlinie",
-            "submitData": "Daten absenden",
-            "abort": "Antwort abbrechen",
-            "exportData": "Daten exportieren",
-            "invalidHeight": "Die Größe muss zwischen 50 cm und 300 cm liegen.",
-            "invalidWeight": "Das Gewicht muss zwischen 1 kg und 500 kg liegen.",
-            "invalidWaterIntake": "Die tägliche Wasseraufnahme muss zwischen 0 und 50 Litern liegen.",
-            "invalidHeartRate": "Die Herzfrequenz muss zwischen 30 und 250 liegen.",
-            "invalidSleep": "Die Schlafdauer muss zwischen 0 und 24 Stunden liegen.",
-            "invalidBloodPressure": "Der Blutdruck muss im Format systolisch/diastolisch angegeben werden (z.B.: 120/80)."
-        }
+  "components": {
+    "chatInterface": {
+      "placeholder": "Geben Sie Ihre Nachricht ein..."
     },
-    "global": {
-        "successSave": "Erfolgreich gespeichert",
-        "successShare": "Erfolgreich gesendet",
-        "errorSave": "Fehler beim Speichern aufgetreten.",
-        "errorSend": "Fehler beim Senden der Daten aufgetreten",
-        "tryAgain": "Bitte versuchen Sie es später erneut oder aktualisieren Sie die Seite.",
-        "emptyResponse": "Keine Antwort vom Server erhalten. Möglicherweise gab es eine Unterbrechung.",
-        "networkError": "Netzwerkfehler – bitte überprüfen Sie Ihre Internetverbindung!",
-        "unknownError": "Ein unbekannter Fehler ist aufgetreten. 😔",
-        "errorLoad": "Die Datei enthält keine gültigen Daten!",
-        "invalidJson": "Ungültiges Dateiformat! Bitte stellen Sie sicher, dass Sie eine JSON-Datei hochgeladen haben.",
-        "anotherFile": "Bitte versuchen Sie es erneut oder wählen Sie eine andere Datei.",
-        "needPermission": "Bitte erteilen Sie die Berechtigung zum Zugriff auf den Speicher."
+    "clickMenu": {
+      "showForm": "Dateneingabeformular anzeigen",
+      "showChat": "Chat-Oberfläche anzeigen"
+    },
+    "fileUpload": {
+      "title": "Laden Sie Ihre Daten hoch",
+      "upload": "Datei auswählen oder hierher ziehen",
+      "lastLoaded": "Zuletzt geladen"
+    },
+    "header": {
+      "settings": "Einstellungen"
+    },
+    "optionalFields": {
+      "heartRate": "Durchschnittlicher Puls",
+      "placeholderHeartRate": "z. B.: 76",
+      "bloodPressure": "Durchschnittlicher Blutdruck",
+      "placeholderBloodPressure": "z. B.: 120/80",
+      "sports": "Sportarten",
+      "placeholderSports": "z. B.: Laufen, Schwimmen",
+      "medications": "Medikamente",
+      "placeholderMedications": "z. B.: Aspirin, Paracetamol",
+      "chronicDiseases": "Chronische Krankheiten",
+      "placeholderChronicDiseases": "z. B.: Bluthochdruck, Diabetes",
+      "allergies": "Allergien",
+      "placeholderAllergies": "z. B.: Pollen, Nüsse",
+      "diet": "Ernährung",
+      "placeholderDiet": "z. B.: Vegetarisch, Glutenfrei",
+      "waterIntake": "Tägliche Wasseraufnahme (Liter)",
+      "placeholderWaterIntake": "z. B.: 2,5",
+      "familyHistory": "Familiäre Krankengeschichte",
+      "placeholderFamilyHistory": "z. B.: Herzkrankheiten, Krebs",
+      "smoking": "Rauchen",
+      "smokingOptions": {
+        "selectPlaceholder": "Wähle eine Rauchgewohnheit",
+        "never": "Nie",
+        "occasionally": "Gelegentlich",
+        "regularly": "Regelmäßig"
+      },
+      "alcohol": "Alkoholkonsum",
+      "alcoholOptions": {
+        "selectPlaceholder": "Wähle eine Trinkgewohnheit",
+        "never": "Nie",
+        "occasionally": "Gelegentlich",
+        "regularly": "Regelmäßig"
+      },
+      "sleep": "Schlaf (Stunden/Tag)",
+      "placeholderSleep": "z. B.: 7",
+      "physicalActivityLevel": "Körperliche Aktivität",
+      "placeholderPhysicalActivityLevel": "z. B.: Niedrig, Mittel, Hoch",
+      "workType": "Art der Arbeit",
+      "placeholderWorkType": "z. B.: Büro, Körperlich, Gemischt",
+      "stressLevel": "Stressniveau",
+      "placeholderStressLevel": "z. B.: Niedrig, Mittel, Hoch / 30, 60, 90",
+      "mentalHealth": "Psychische Gesundheit",
+      "placeholderMentalHealth": "z. B.: Depression, Angst",
+      "cholesterolLevel": "Cholesterinwert",
+      "placeholderCholesterolLevel": "z. B.: 200 mg/dL",
+      "bloodSugarLevel": "Blutzuckerwert",
+      "placeholderBloodSugarLevel": "z. B.: 100 mg/dL",
+      "supplements": "Nahrungsergänzungsmittel",
+      "placeholderSupplements": "z. B.: Vitamin D, Omega‑3",
+      "vaccinations": "Impfungen",
+      "placeholderVaccinations": "z. B.: Grippe, COVID‑19",
+      "reproductiveHealth": "Reproduktive Gesundheit",
+      "placeholderReproductiveHealth": "z. B.: Menstruationszyklus, Schwangerschaft",
+      "visionAndHearing": "Seh- und Hörvermögen",
+      "placeholderVisionAndHearing": "z. B.: Kurzsichtigkeit, Hörverlust",
+      "sleepQuality": "Schlafqualität",
+      "placeholderSleepQuality": "z. B.: Gut, Mittel, Schlecht",
+      "medicalRecords": "Ärztliche Befunde",
+      "placeholderMedicalRecords": "z. B.: Bluttest, Röntgen",
+      "medicalHistory": "Medizinische Vorgeschichte",
+      "placeholderMedicalHistory": "z. B.: Operationen, Krankenhausaufenthalte"
+    },
+    "privacyModal": {
+      "title": "Datenschutzerklärung",
+      "text1": "Die von Ihnen bereitgestellten Daten werden ausschließlich vom Gesundheitssystem verwendet und nicht an Dritte weitergegeben. Ihre Daten werden nicht gespeichert – Sie verwalten sie selbst und können sie auf Ihr Gerät exportieren.",
+      "text2": "Durch die Zustimmung zu den Datenschutzbedingungen erlauben Sie dem System, Ihnen auf Basis Ihrer Angaben Ratschläge zu geben."
+    },
+    "response": {
+      "title": "Antwort von Dr. Sanovise:",
+      "analyzing": "Ich analysiere die Daten 📚🧠",
+      "thinking": "Ich denke nach 🤔"
+    },
+    "settingsModal": {
+      "title": "Einstellungen",
+      "selectLanguage": "Sprache auswählen:",
+      "selectAIModel": "KI-Modell auswählen:",
+      "version": "Version"
+    },
+    "userForm": {
+      "requiredInfo": "Felder mit <span class='required'>*</span> sind Pflichtfelder!",
+      "birthDate": "Geburtsdatum",
+      "gender": "Geschlecht",
+      "selectGender": "Geschlecht auswählen",
+      "male": "Männlich",
+      "female": "Weiblich",
+      "height": "Größe",
+      "weight": "Gewicht",
+      "placeholderHeight": "z. B.: 175",
+      "placeholderWeight": "z. B.: 70",
+      "showExtra": "Weitere Angaben machen",
+      "hideExtra": "Weitere Angaben ausblenden",
+      "acceptPrivacy": "Ich akzeptiere die",
+      "privacyLink": "Datenschutzrichtlinie",
+      "submitData": "Daten absenden",
+      "abort": "Nicht antworten",
+      "exportData": "Daten exportieren",
+      "invalidHeight": "Die Größe muss zwischen 50 cm und 300 cm liegen.",
+      "invalidWeight": "Das Gewicht muss zwischen 1 kg und 500 kg liegen.",
+      "invalidWaterIntake": "Der tägliche Wasserkonsum muss zwischen 0 und 50 Litern liegen.",
+      "invalidHeartRate": "Der Puls muss zwischen 30 und 250 liegen.",
+      "invalidSleep": "Die Schlafdauer muss zwischen 0 und 24 Stunden liegen.",
+      "invalidBloodPressure": "Der Blutdruck muss im Format systole/diastole angegeben werden (z. B.: 120/80)."
     }
+  },
+  "global": {
+    "successSave": "Erfolgreich gespeichert",
+    "successShare": "Erfolgreich gesendet",
+    "errorSave": "Fehler beim Speichern aufgetreten.",
+    "errorSend": "Fehler beim Senden der Daten aufgetreten",
+    "tryAgain": "Bitte versuchen Sie es später erneut oder laden Sie die Seite neu.",
+    "emptyResponse": "Keine Antwort vom Server erhalten. Es könnte eine Unterbrechung vorliegen.",
+    "networkError": "Netzwerkfehler – bitte überprüfen Sie Ihre Internetverbindung!",
+    "unknownError": "Ein unbekannter Fehler ist aufgetreten. 😔",
+    "errorLoad": "Die Datei enthält keine gültigen Daten!",
+    "invalidJson": "Ungültiges Dateiformat! Bitte überprüfen Sie, ob Sie eine JSON-Datei hochgeladen haben.",
+    "anotherFile": "Bitte versuchen Sie es erneut oder wählen Sie eine andere Datei.",
+    "needPermission": "Bitte erteilen Sie die Berechtigung für den Speicherzugriff."
+  }
 }
