--- a/app/locales/ru-RU.json
+++ b/app/locales/ru-RU.json
@@ -1,135 +1,136 @@
 {
-    "components": {
-        "chatInterface": {
-            "placeholder": "Введите ваше сообщение..."
-        },
-        "clickMenu": {
-            "showForm": "Показать форму ввода данных",
-            "showChat": "Показать интерфейс чата"
-        },
-        "fileUpload": {
-            "title": "Загрузите ваши данные",
-            "upload": "Выберите файл или перетащите его сюда",
-            "lastLoaded": "Последняя загрузка"
-        },
-        "header": {
-            "settings": "Настройки"
-        },
-        "optionalFields": {
-            "heartRate": "Пульс",
-            "placeholderHeartRate": "Введите ваш пульс",
-            "bloodPressure": "Артериальное давление",
-            "placeholderBloodPressure": "Введите давление, например: 120/80",
-            "sports": "Виды спорта",
-            "placeholderSports": "Какими видами спорта вы занимаетесь?",
-            "medications": "Медикаменты",
-            "placeholderMedications": "Введите принимаемые лекарства",
-            "chronicDiseases": "Хронические заболевания",
-            "placeholderChronicDiseases": "Введите хронические заболевания",
-            "allergies": "Аллергии",
-            "placeholderAllergies": "Введите ваши аллергии",
-            "diet": "Диета",
-            "placeholderDiet": "Введите вашу диету",
-            "waterIntake": "Суточное потребление воды (литры)",
-            "placeholderWaterIntake": "Введите суточное потребление воды",
-            "familyHistory": "Семейная история болезней",
-            "placeholderFamilyHistory": "Введите семейную историю",
-            "smoking": "Курение",
-            "smokingOptions": {
-                "never": "Никогда",
-                "occasionally": "Иногда",
-                "regularly": "Регулярно"
-            },
-            "selectPlaceholder": "Выберите",
-            "alcohol": "Употребление алкоголя",
-            "alcoholOptions": {
-                "never": "Никогда",
-                "occasionally": "Иногда",
-                "regularly": "Регулярно"
-            },
-            "sleep": "Сон (часы в день)",
-            "placeholderSleep": "Введите продолжительность сна",
-            "physicalActivityLevel": "Уровень физической активности",
-            "placeholderPhysicalActivityLevel": "Введите ваш уровень активности",
-            "workType": "Тип работы",
-            "placeholderWorkType": "Введите тип вашей работы",
-            "stressLevel": "Уровень стресса",
-            "placeholderStressLevel": "Введите уровень вашего стресса",
-            "mentalHealth": "Психическое здоровье",
-            "placeholderMentalHealth": "Введите состояние психического здоровья",
-            "cholesterolLevel": "Уровень холестерина",
-            "placeholderCholesterolLevel": "Введите уровень холестерина",
-            "bloodSugarLevel": "Уровень сахара в крови",
-            "placeholderBloodSugarLevel": "Введите уровень сахара в крови",
-            "supplements": "Пищевые добавки",
-            "placeholderSupplements": "Введите принимаемые добавки",
-            "vaccinations": "Прививки",
-            "placeholderVaccinations": "Введите сделанные прививки",
-            "reproductiveHealth": "Репродуктивное здоровье",
-            "placeholderReproductiveHealth": "Введите информацию о репродуктивном здоровье",
-            "visionAndHearing": "Зрение и слух",
-            "placeholderVisionAndHearing": "Введите проблемы со зрением и слухом",
-            "sleepQuality": "Качество сна",
-            "placeholderSleepQuality": "Введите качество сна",
-            "medicalRecords": "Медицинские записи",
-            "placeholderMedicalRecords": "Введите ваши медицинские записи",
-            "medicalHistory": "Медицинская история",
-            "placeholderMedicalHistory": "Введите вашу медицинскую историю"
-        },
-        "privacyModal": {
-            "title": "Наша политика конфиденциальности",
-            "text1": "Предоставленные вами данные будут использоваться только системой консультации по вопросам здоровья и не будут переданы третьим лицам. Ваши данные не будут сохраняться; вы сможете управлять ими и хранить их на своём устройстве.",
-            "text2": "Принимая политику конфиденциальности, вы соглашаетесь на использование предоставленной вами информации для предоставления рекомендаций."
-        },
-        "response": {
-            "title": "Ответ Dr. Sanovise:",
-            "analyzing": "Анализирую данные 📚🧠",
-            "thinking": "Думаю 🤔"
-        },
-        "settingsModal": {
-            "title": "Настройки",
-            "selectLanguage": "Выберите предпочитаемый язык:",
-            "selectAIModel": "Выберите предпочитаемую модель ИИ:",
-            "version": "Версия"
-        },
-        "userForm": {
-            "requiredInfo": "Поля, отмеченные <span class='required'>*</span>, обязательны для заполнения!",
-            "birthDate": "Дата рождения",
-            "gender": "Пол",
-            "selectGender": "Выберите пол",
-            "male": "Мужской",
-            "female": "Женский",
-            "height": "Рост",
-            "weight": "Вес",
-            "placeholderHeight": "например: 175",
-            "placeholderWeight": "например: 70",
-            "showExtra": "Заполнить дополнительную информацию",
-            "hideExtra": "Скрыть дополнительную информацию",
-            "acceptPrivacy": "Я принимаю",
-            "privacyLink": "политику конфиденциальности",
-            "submitData": "Отправить данные",
-            "abort": "Отменить ответ",
-            "exportData": "Экспортировать данные",
-            "invalidHeight": "Рост должен быть от 50 см до 300 см.",
-            "invalidWeight": "Вес должен быть от 1 кг до 500 кг.",
-            "invalidWaterIntake": "Потребление воды должно быть от 0 до 50 литров в день.",
-            "invalidHeartRate": "Пульс должен быть в диапазоне от 30 до 250.",
-            "invalidSleep": "Продолжительность сна должна быть от 0 до 24 часов.",
-            "invalidBloodPressure": "Формат давления должен быть систолическое/диастолическое (например: 120/80)."
-        }
+  "components": {
+    "chatInterface": {
+      "placeholder": "Введите ваше сообщение..."
     },
-    "global": {
-        "successSave": "Успешно сохранено",
-        "successShare": "Успешно отправлено",
-        "errorSave": "Произошла ошибка при сохранении данных.",
-        "errorSend": "Произошла ошибка при отправке данных.",
-        "tryAgain": "Попробуйте позже или перезагрузите страницу.",
-        "emptyResponse": "Сервер не отправил ответ. Возможно, произошла ошибка.",
-        "networkError": "Ошибка сети — проверьте подключение к интернету!",
-        "unknownError": "Произошла неизвестная ошибка. 😔",
-        "errorLoad": "Файл не содержит допустимых данных!",
-        "invalidJson": "Недопустимый формат файла! Убедитесь, что вы загружаете файл в формате JSON.",
-        "anotherFile": "Попробуйте снова или выберите другой файл.",
-        "needPermission": "Пожалуйста, предоставьте разрешение на доступ к хранилищу."
+    "clickMenu": {
+      "showForm": "Показать форму ввода данных",
+      "showChat": "Показать чат"
+    },
+    "fileUpload": {
+      "title": "Загрузите ваши данные",
+      "upload": "Выберите файл или перетащите его сюда",
+      "lastLoaded": "Последняя загрузка"
+    },
+    "header": {
+      "settings": "Настройки"
+    },
+    "optionalFields": {
+      "heartRate": "Средний пульс",
+      "placeholderHeartRate": "напр.: 76",
+      "bloodPressure": "Среднее артериальное давление",
+      "placeholderBloodPressure": "напр.: 120/80",
+      "sports": "Виды спорта",
+      "placeholderSports": "напр.: Бег, Плавание",
+      "medications": "Лекарства",
+      "placeholderMedications": "напр.: Аспирин, Парацетамол",
+      "chronicDiseases": "Хронические заболевания",
+      "placeholderChronicDiseases": "напр.: Гипертония, Диабет",
+      "allergies": "Аллергии",
+      "placeholderAllergies": "напр.: Пыльца, Орехи",
+      "diet": "Диета",
+      "placeholderDiet": "напр.: Вегетарианская, Безглютеновая",
+      "waterIntake": "Суточное потребление воды (литры)",
+      "placeholderWaterIntake": "напр.: 2.5",
+      "familyHistory": "Семейный анамнез",
+      "placeholderFamilyHistory": "напр.: Сердечные заболевания, Рак",
+      "smoking": "Курение",
+      "smokingOptions": {
+        "selectPlaceholder": "Выберите привычку курения",
+        "never": "Никогда",
+        "occasionally": "Иногда",
+        "regularly": "Регулярно"
+      },
+      "alcohol": "Потребление алкоголя",
+      "alcoholOptions": {
+        "selectPlaceholder": "Выберите привычку потребления алкоголя",
+        "never": "Никогда",
+        "occasionally": "Иногда",
+        "regularly": "Регулярно"
+      },
+      "sleep": "Сон (часы/день)",
+      "placeholderSleep": "напр.: 7",
+      "physicalActivityLevel": "Уровень физической активности",
+      "placeholderPhysicalActivityLevel": "напр.: Низкий, Средний, Высокий",
+      "workType": "Тип работы",
+      "placeholderWorkType": "напр.: Офисная, Физическая, Смешанная",
+      "stressLevel": "Уровень стресса",
+      "placeholderStressLevel": "напр.: Низкий, Средний, Высокий / 30, 60, 90",
+      "mentalHealth": "Психическое здоровье",
+      "placeholderMentalHealth": "напр.: Депрессия, Тревожность",
+      "cholesterolLevel": "Уровень холестерина",
+      "placeholderCholesterolLevel": "напр.: 200 мг/дл",
+      "bloodSugarLevel": "Уровень сахара в крови",
+      "placeholderBloodSugarLevel": "напр.: 100 мг/дл",
+      "supplements": "Пищевые добавки",
+      "placeholderSupplements": "напр.: Витамин D, Омега‑3",
+      "vaccinations": "Вакцинации",
+      "placeholderVaccinations": "напр.: Грипп, COVID‑19",
+      "reproductiveHealth": "Репродуктивное здоровье",
+      "placeholderReproductiveHealth": "напр.: Менструальный цикл, Беременность",
+      "visionAndHearing": "Зрение и слух",
+      "placeholderVisionAndHearing": "напр.: Близорукость, Потеря слуха",
+      "sleepQuality": "Качество сна",
+      "placeholderSleepQuality": "напр.: Хорошее, Среднее, Плохое",
+      "medicalRecords": "Медицинские записи",
+      "placeholderMedicalRecords": "напр.: Анализы крови, Рентген",
+      "medicalHistory": "Медицинская история",
+      "placeholderMedicalHistory": "напр.: Операции, Госпитализации"
+    },
+    "privacyModal": {
+      "title": "Политика конфиденциальности",
+      "text1": "Предоставленные вами данные используются исключительно системой медицинских рекомендаций и не передаются третьим лицам. Данные не сохраняются — вы контролируете их и можете сохранить на своём устройстве.",
+      "text2": "Приняв политику конфиденциальности, вы соглашаетесь получать советы на основе введённой вами информации."
+    },
+    "response": {
+      "title": "Ответ доктора Сановайза:",
+      "analyzing": "Анализирую данные 📚🧠",
+      "thinking": "Думаю 🤔"
+    },
+    "settingsModal": {
+      "title": "Настройки",
+      "selectLanguage": "Выберите язык:",
+      "selectAIModel": "Выберите AI-модель:",
+      "version": "Версия"
+    },
+    "userForm": {
+      "requiredInfo": "Поля, отмеченные <span class='required'>*</span>, обязательны для заполнения!",
+      "birthDate": "Дата рождения",
+      "gender": "Пол",
+      "selectGender": "Выберите пол",
+      "male": "Мужской",
+      "female": "Женский",
+      "height": "Рост",
+      "weight": "Вес",
+      "placeholderHeight": "напр.: 175",
+      "placeholderWeight": "напр.: 70",
+      "showExtra": "Показать дополнительные данные",
+      "hideExtra": "Скрыть дополнительные данные",
+      "acceptPrivacy": "Я принимаю",
+      "privacyLink": "политику конфиденциальности",
+      "submitData": "Отправить данные",
+      "abort": "Не отвечать",
+      "exportData": "Экспорт данных",
+      "invalidHeight": "Рост должен быть от 50 до 300 см.",
+      "invalidWeight": "Вес должен быть от 1 до 500 кг.",
+      "invalidWaterIntake": "Потребление воды должно быть от 0 до 50 литров в день.",
+      "invalidHeartRate": "Пульс должен быть от 30 до 250.",
+      "invalidSleep": "Продолжительность сна должна быть от 0 до 24 часов.",
+      "invalidBloodPressure": "Формат давления должен быть: систолическое/диастолическое (напр.: 120/80)."
     }
+  },
+  "global": {
+    "successSave": "Успешно сохранено",
+    "successShare": "Успешно отправлено",
+    "errorSave": "Ошибка при сохранении.",
+    "errorSend": "Ошибка при отправке данных",
+    "tryAgain": "Пожалуйста, попробуйте позже или обновите страницу.",
+    "emptyResponse": "Сервер не ответил. Возможно, соединение прервано.",
+    "networkError": "Ошибка сети — проверьте подключение к интернету!",
+    "unknownError": "Произошла неизвестная ошибка. 😔",
+    "errorLoad": "Файл не содержит допустимых данных!",
+    "invalidJson": "Неверный формат файла! Убедитесь, что вы загрузили JSON-файл.",
+    "anotherFile": "Попробуйте снова или выберите другой файл.",
+    "needPermission": "Предоставьте доступ к хранилищу."
+  }
 }
